Update export logic — fully functional implementation for issue #13868